--- a/scss/h5player.scss
+++ b/scss/h5player.scss
@@ -222,6 +222,8 @@ body {
                                 opacity: .5;
                                 font-size: 12px;
                                 position: relative;top:-2px;
+                                padding-right: 12px;
+                                padding-left: 2px;
                             }
                             .live-over-video-gift{
                                 background: url('../imgs/h5player/over/video_gift@2x.png') no-repeat;
