--- a/scss/h5player.scss
+++ b/scss/h5player.scss
@@ -336,7 +336,7 @@ body {
                     color:#fff;
                     opacity: .6;
                     font-size: 12px;
-                    
+                    text-align: left;
                 }
                 .live-interrupt-title{
                     font-size: 16px;
@@ -400,7 +400,7 @@ body {
     }
     .live-h5player-controlbar {
         position: absolute;
-        bottom: 0;
+        bottom: -45px;
         left: 0;
         height: 45px;
         width: 100%;
@@ -923,9 +923,7 @@ body {
             background-size: 34px 20px;
         }
     }
-    .controlbar-bottom {
-        bottom: -45px;
-    }
+   
     .live-h5player-barrage {
         width: 100%;
         height: 100%;
@@ -1076,29 +1074,36 @@ body {
         border-radius: 3px;
         overflow: hidden;
         position: absolute;
-        background-color: #f0f0f0;
+        background-color: rgba(255,255,255,.9);
         top: 0;
         left: 0;
+        z-index: 30;
         .h5player-rightmenu-item {
             padding-left: 15px;
-            height: 30px;
-            line-height: 30px;
+            height: 28px;
+            line-height: 28px;
             text-align: left;
             font-size: 14px;
             color: #000;
             cursor: pointer;
+            font-weight: bold;
             &:hover {
                 background-color: #d0d0d0;
             }
             &:first-child {
                 cursor: auto;
-                border-bottom: 2px solid rgba(0, 0, 0, .1);
+                border-bottom: 1px solid rgba(0, 0, 0, .1);
                 &:hover {
                     background-color: #f0f0f0;
                 }
             }
         }
     }
+    &:hover{
+        .live-h5player-controlbar{
+            bottom:0;
+        }
+    };
 }
 .ellipsis{
    overflow: hidden;
