--- a/css/h5player.css
+++ b/css/h5player.css
@@ -301,7 +301,8 @@ body {
         .live-h5player-container .live-h5player-status .live-interrupt .live-interrupt-box p {
           color: #fff;
           opacity: .6;
-          font-size: 12px; }
+          font-size: 12px;
+          text-align: left; }
         .live-h5player-container .live-h5player-status .live-interrupt .live-interrupt-box .live-interrupt-title {
           font-size: 16px;
           margin-bottom: 12px; }
@@ -355,7 +356,7 @@ body {
       margin: 0 auto; }
   .live-h5player-container .live-h5player-controlbar {
     position: absolute;
-    bottom: 0;
+    bottom: -45px;
     left: 0;
     height: 45px;
     width: 100%;
@@ -754,8 +755,6 @@ body {
     .live-h5player-container .live-h5player-controlbar .h5player-barrage-off {
       background: url("../imgs/h5player/barrage_off.png") no-repeat;
       background-size: 34px 20px; }
-  .live-h5player-container .controlbar-bottom {
-    bottom: -45px; }
   .live-h5player-container .live-h5player-barrage {
     width: 100%;
     height: 100%;
@@ -887,24 +886,28 @@ body {
     border-radius: 3px;
     overflow: hidden;
     position: absolute;
-    background-color: #f0f0f0;
+    background-color: rgba(255, 255, 255, 0.9);
     top: 0;
-    left: 0; }
+    left: 0;
+    z-index: 30; }
     .live-h5player-container .live-h5player-rightmenu .h5player-rightmenu-item {
       padding-left: 15px;
-      height: 30px;
-      line-height: 30px;
+      height: 28px;
+      line-height: 28px;
       text-align: left;
       font-size: 14px;
       color: #000;
-      cursor: pointer; }
+      cursor: pointer;
+      font-weight: bold; }
       .live-h5player-container .live-h5player-rightmenu .h5player-rightmenu-item:hover {
         background-color: #d0d0d0; }
       .live-h5player-container .live-h5player-rightmenu .h5player-rightmenu-item:first-child {
         cursor: auto;
-        border-bottom: 2px solid rgba(0, 0, 0, 0.1); }
+        border-bottom: 1px solid rgba(0, 0, 0, 0.1); }
         .live-h5player-container .live-h5player-rightmenu .h5player-rightmenu-item:first-child:hover {
           background-color: #f0f0f0; }
+  .live-h5player-container:hover .live-h5player-controlbar {
+    bottom: 0; }
 
 .ellipsis {
   overflow: hidden;
