--- a/scss/h5player.scss
+++ b/scss/h5player.scss
@@ -1,4 +1,4 @@
-body {
+svn up /opt/branches-static/body {
     width: 100%;
 }
 
@@ -112,7 +112,7 @@ body {
         	top:0;
         	left:0;
         	background: rgba(0,0,0,.6);
-        	z-index: 20;
+        	z-index: 21;
         	.unsupport-autoplay-box{
         		width: 300px;
         		height: 230px;
@@ -204,6 +204,7 @@ body {
                     }
                     .rec-info-box{
                         width: 100%;
+                        text-align: left;
                         .rec-info-title{
                             height: 14px;
                             line-height: 14px;
@@ -929,7 +930,9 @@ body {
             background-size: 34px 20px;
         }
     }
-   
+    .live-h5player-controlbar-show{
+        bottom:0;
+    }
     .live-h5player-barrage {
         width: 100%;
         height: 100%;
@@ -1105,11 +1108,6 @@ body {
             }
         }
     }
-    &:hover{
-        .live-h5player-controlbar{
-            bottom:0;
-        }
-    };
 }
 .ellipsis{
    overflow: hidden;
