--- a/scss/h5player.scss
+++ b/scss/h5player.scss
@@ -38,6 +38,7 @@ body {
             left: 50%;
             margin-top: -39px;
             margin-left: -50px;
+            z-index: 20;
             .live-loading-icon {
                 width: 48px;
                 height: 48px;
